--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,11 @@
             <version>6.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5</version>
+        </dependency>
+
     </dependencies>
 </project>
